# Network-Tools

./: .gitignore  README.es.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
_backups/export-txt-save-dialog-20260621-012931/: README.es.md  docs_roadmap.md
_backups/fix-duplicated-scan-report-20260621-020814/: App.tsx
_backups/fix-icon-20260621-002802/: src-tauri_tauri.conf.json
_backups/fix-main-rs-smart-scan-20260621-010332/: README.es.md  README.md  docs_roadmap.md
_backups/fix-report-network-scan-20260621-020036/: App.tsx
_backups/fix-rust-autoscan-20260621-005134/: README.es.md  README.md  src-tauri_src_main.rs
_backups/fix-txt-export-lines-20260621-013416/: App.tsx
_backups/fix-vite-watch-20260621-002507/: vite.config.ts
_backups/icon-rebuild-20260621-022748/: src-tauri_Cargo.toml
_backups/network-scan-classification-20260621-011317/: src_styles.css
_backups/network-scan-smart-v1-20260621-010004/: README.es.md  README.md  src-tauri_src_main.rs  src_App.tsx
_backups/network-scan-v1-20260621-005545/: README.es.md  docs_roadmap.md  src-tauri_src_main.rs  src_styles.css
_backups/phase2-network-diagnostics-20260621-003333/: docs_roadmap.md  src_App.tsx
_backups/safe-mojibake-fix-20260621-114525/: src_App.tsx  (+1 more)
backup-readme-conflict-20260622-211428/: README.md
backup-readme-screenshots-20260622-212012/: README.md
docs/: SECURITY-NOTE.md  roadmap.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+11 files in other folders)
