[package]
name = "network-tools"
version = "0.1.0"
description = "Portable Windows toolkit for basic network diagnostics."
authors = ["MPTech Tools"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"