[package]
name = "network-tools"
version = "1.0.0"
description = "Portable Windows toolkit for network diagnostics, local scan, ping, ports, traceroute and TXT reports."
authors = ["MPTech Tools"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
